fix: layout on mobile landscape

--- a/src/App.css
+++ b/src/App.css
@@ -15,10 +15,9 @@
 }
 
 .title-layout {
-  margin: 16px;
+  margin: 8px;
 }
 
 .calculator-layout {
-  margin-top: 16px;
-  margin-bottom: 16px;
+  margin-top: 8px;
 }
