--- a/src/components/Title/Title.css
+++ b/src/components/Title/Title.css
@@ -25,7 +25,7 @@
 }
 
 .title-text-small {
-  font-size: 36px;
+  font-size: 24px;
 }
 
 .day-input {
